--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<div class="page-wrapper">
 		<div class="page">
 		<div class="toolbar">
+			<a href="#"></a>
 			<div class="tools">
 				<label class="switch appearance-switch">
 					<input type="checkbox" id="appearance" />
@@ -82,15 +83,17 @@
 				<li><i class="emoji">&#x1F44D;</i></li>
 			</ul>
 			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
+			<p class="dust">&copy;NRP • Made in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Laniakea Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
 		</footer>
-		<script src="js/howler.core.min.js"></script>
-		<script src="js/drums.js"></script>
 	</div>
 	</div>
 	<div class="overlay"></div>
 	<div class="drawer">
 		<div class="toolbar">
-			<a class="close btn close-drawer"><i class="icon">&times;</i> <span class="hotkey">esc</span></a>
+			<a href="mailto:nathanphilpot@gmail.com" target="_blank" class="alt-preview mini-preview-anchor">Request password</a>
+			<div class="tools">
+				<a class="close btn close-drawer"><i class="icon">&times;</i> <span class="hotkey">esc</span></a>
+			</div>
 		</div>
 		<form class="page password-form">
 			<p>What&rsquo;s the deal with passwords? You type them in, and boom&ndash;access granted. But you can&rsquo;t just tell people, &lsquo;Here&rsquo;s my work, come on in!&rsquo; No, no, no. You need a password to prove you&rsquo;re serious. So, go ahead, enter the password. It&rsquo;s like I&rsquo;m letting you into my secret design lair. And don&rsquo;t worry, it&rsquo;s not <i class="ital">password</i>, because who&rsquo;s still using that? Oh right&hellip; everyone. <i class="ital">&mdash;<a href="https://chatgpt.com/" target="_blank">ChatGPT</a> Jerry Seinfeld</i></p>
