--- a/work/index.html
+++ b/work/index.html
@@ -37,17 +37,14 @@
 	<div class="page-wrapper">
 		<div class="page">
 		<div class="toolbar">
-			<label class="switch appearance-switch">
-				<input type="checkbox" id="appearance" />
-				<span class="slider"></span>
-			</label>
+			<a href="https://nathanrp.github.io"><i class="icon">&larr;</i> Home</a>
 		</div>
-		<header>
-			<a href="">Work</a>
-			<div class="desc">Coming soon&hellip;</div>
-		</header>
-		<section></section>
+		<section>
+			<p>Hopefully what you have seen so far is enough to get you to reach out to me. &#128591; Work samples are coming soon&hellip;</p>
+		</section>
 		<footer>
+			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
+			<p class="dust">&copy;NRP • Made in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Laniakea Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
 		</footer>
 	</div>
 </body>
