--- a/work/index.html
+++ b/work/index.html
@@ -44,7 +44,7 @@
 		</section>
 		<footer>
 			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
-			<p class="dust">&copy;NRP • Made in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Laniakea Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
+			<p class="dust">&copy;NRP • Made in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
 		</footer>
 	</div>
 </body>
