--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<li><i class="emoji">&#x1F44D;</i></li>
 			</ul>
 			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
-			<p class="dust">&copy;NRP • Made in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
+			<p class="dust">&copy;NRP • Made by me in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
 		</footer>
 	</div>
 	</div>
