--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</div>
 		<header>
 			<a href="">Nathan Philpot</a>
-			<div class="desc">Product Design.</div>
+			<div class="desc">Product Design</div>
 		</header>
 		<section>
 			<h2>About me</h2>
@@ -76,10 +76,10 @@
 						<div class="mini-preview-loading">Send me an email&hellip;</div>
 					</div>
 				</a></li>
-				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank" class="link-preview">LinkedIn<i>&nearr;</i></a></li>
-				<li><a href="https://x.com/nathanphilpot" target="_blank" class="link-preview"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
-				<li><a href="https://dribbble.com/nathanphilpot" target="_blank" class="link-preview">Dribbble<i>&nearr;</i></a></li>
-				<li><a href="https://github.com/nathanrp" target="_blank" class="link-preview">Github<i>&nearr;</i></a></li>
+				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
+				<li><a href="https://x.com/nathanphilpot" target="_blank"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
+				<li><a href="https://dribbble.com/nathanphilpot" target="_blank">Dribbble<i>&nearr;</i></a></li>
+				<li><a href="https://github.com/nathanrp" target="_blank">Github<i>&nearr;</i></a></li>
 				<li><i class="emoji">&#x1F44D;</i></li>
 			</ul>
 			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
