--- a/work/index.html
+++ b/work/index.html
@@ -40,7 +40,11 @@
 			<a href="https://nathanrp.github.io"><i class="icon">&larr;</i> Home</a>
 		</div>
 		<section>
-			<p>Hopefully, what you have seen so far is enough to get you to reach out to me. &#128591; Work samples are coming soon&hellip;</p>
+			<div class="designs">
+				<img src="../img/hcp-1.png" alt="" class="sshot" />
+				<img src="../img/hcp-1.png" alt="" class="sshot" />
+				<img src="../img/hcp-1.png" alt="" class="sshot" />
+			</div>
 		</section>
 		<footer>
 			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
