--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	gtag('config', 'UA-3470140-1');
 	</script>
 
-	<meta name="description" content="Nathan Philpot. I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions. My goal is to make complexity simple for the user. I believe design matters. I believe design is honest."/>
+	<meta name="description" content="Nathan Philpot"/>
 
 	<meta name="keywords" content="design leadership, UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
 
@@ -57,13 +57,13 @@
 			Check out some of my <a class="multi-preview mini-preview-anchor open-drawer">
 				past work&hellip;
 				<div class="mini-preview-wrapper">
-					<div class="mini-preview-loading">&hellip;</div>
+					<div class="mini-preview-loading"><img src="img/wgu/wgu-logo.png" alt="" /></div>
 				</div>
 				<div class="mini-preview-wrapper">
-					<div class="mini-preview-loading">soon</div>
+					<div class="mini-preview-loading"><img src="img/m/m-logo.png" alt="" /></div>
 				</div>
 				<div class="mini-preview-wrapper">
-					<div class="mini-preview-loading">coming soon&hellip;</div>
+					<div class="mini-preview-loading"><img src="img/hcp/hcp-logo.png" alt="" /></div>
 				</div>
 			</a>
 		</section>
