--- a/work/index.html
+++ b/work/index.html
@@ -12,9 +12,7 @@
 	gtag('config', 'UA-3470140-1');
 	</script>
 
-	<meta name="description" content="Nathan Philpot. I design usable interfaces and enjoyable user experiences. From small mobile apps to international enterprise solutions. My goal is to make complexity simple for the user. I believe design matters. I believe design is honest."/>
-
-	<meta name="keywords" content="design leadership, UX, Interaction design, user-experience, usability, interface design, ui, prototyping, mobile, design, web design, HTML, CSS, Javascript, wireframes, accessibility, icons"/>
+	<meta name="description" content="Nathan Philpot"/>
 
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -36,20 +34,27 @@
 <body>
 	<div class="page-wrapper">
 		<div class="page">
-		<div class="toolbar">
-			<a href="https://nathanrp.github.io"><i class="icon">&larr;</i> Home</a>
-		</div>
-		<section>
-			<div class="designs">
-				<img src="../img/hcp-1.png" alt="" class="sshot" />
-				<img src="../img/hcp-1.png" alt="" class="sshot" />
-				<img src="../img/hcp-1.png" alt="" class="sshot" />
+			<div class="toolbar">
+				<a href="https://nathanrp.github.io"><i class="icon">&larr;</i> Home</a>
 			</div>
-		</section>
-		<footer>
-			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
-			<p class="dust">&copy;NRP • Made by me in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
-		</footer>
+			<header>
+				<a href="">Work</a>
+			</header>
+			<section>
+				<a class="multi-preview mini-preview-anchor" href="hcp.html">
+					Housecall Pro
+					<div class="mini-preview-wrapper">
+						<div class="mini-preview-loading"><img src="../img/hcp/results.png" alt="" /></div>
+					</div>
+					<div class="mini-preview-wrapper">
+						<div class="mini-preview-loading"><img src="../img/hcp/homepage.png" alt="" /></div>
+					</div>
+					<div class="mini-preview-wrapper">
+						<div class="mini-preview-loading"><img src="../img/hcp/button.gif" alt="" /></div>
+					</div>
+				</a>
+			</section>
+		</div>
 	</div>
 </body>
 </html>
