--- a/work/index.html
+++ b/work/index.html
@@ -41,18 +41,38 @@
 				<a href="">Work</a>
 			</header>
 			<section>
-				<a class="multi-preview mini-preview-anchor" href="hcp.html">
-					Housecall Pro
-					<div class="mini-preview-wrapper">
-						<div class="mini-preview-loading"><img src="../img/hcp/results.png" alt="" /></div>
-					</div>
-					<div class="mini-preview-wrapper">
-						<div class="mini-preview-loading"><img src="../img/hcp/homepage.png" alt="" /></div>
-					</div>
-					<div class="mini-preview-wrapper">
-						<div class="mini-preview-loading"><img src="../img/hcp/button.gif" alt="" /></div>
-					</div>
-				</a>
+				<ul>
+					<li>
+						<a class="multi-preview mini-preview-anchor" href="hcp.html">
+							Housecall Pro
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/hcp/results.png" alt="" /></div>
+							</div>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/hcp/homepage.png" alt="" /></div>
+							</div>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/hcp/button.gif" alt="" /></div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a class="multi-preview mini-preview-anchor">
+							Mavenlink
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading">Coming soon&hellip;</div>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a class="multi-preview mini-preview-anchor">
+							<abbr>WGU</abbr>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading">Coming soon&hellip;</div>
+							</div>
+						</a>
+					</li>
+				</ul>
 			</section>
 		</div>
 	</div>
