--- a/work/hcp.html
+++ b/work/hcp.html
@@ -76,6 +76,7 @@
 				<h3>Patterns</h3>
 				<div class="designs">
 					<img src="../img/hcp/homepage.png" alt="" class="sshot" />
+					<img src="../img/hcp/homepage-mobile.png" alt="" class="sshot" />
 					<img src="../img/hcp/feature.png" alt="" class="sshot" />
 					<img src="../img/hcp/starter-state.png" alt="" class="sshot" />
 				</div>
