--- a/work/hcp.html
+++ b/work/hcp.html
@@ -55,38 +55,42 @@
 					<li>Worked closely with a cross-functional team of Engineers, Designers, Marketing, PMs and executive stakeholders</li>
 					<li>Worked across teams and product areas to create a holistic user-experience</li>
 				</ol>
+				<h4>Design Skillset &amp; Craft</h4>
 				<h3>iOS and Android Design Systems</h3>
+				<p>I established the iOS and Android design systems.</p>
 				<div class="designs">
 					<img src="../img/hcp/figma.png" alt="" class="sshot" />
 					<img src="../img/hcp/ios.png" alt="" class="sshot" />
 					<img src="../img/hcp/android.png" alt="" class="sshot" />
-					<img src="../img/hcp/button.gif" alt="" class="sshot" />
+					<img src="../img/hcp/button.gif" alt="" class="sshot gif" />
 				</div>
-				<h3>Onboarding Experience</h3>
-				<p>Pros struggle to know where to start, how to navigate, and effectively use the many features in <abbr>HCP</abbr>, leading to underutilization of the product.</p>
-				<h3>Desired outcome</h3>
-				<p>A better onboarding experience that helps pros quickly discover the most valuable aspects of the product. This approach was designed to drive higher engagement and ultimately improve customer retention.</p>
-				<h3>Our Solution</h3>
-				<p>We created an onboarding strategy that could be shared across product teams. This strategy includes a set of principles, design patterns, and reusable components that teams could implement to improve the engagement in their specific areas of the product.</p>
-				<h3>Components</h3>
-				<div class="designs">
-					<img src="../img/hcp/micro-inline.png" alt="" class="sshot" />
-					<img src="../img/hcp/onboarding.png" alt="" class="sshot" />
-				</div>
-				<h3>Patterns</h3>
+				<h4>Case Study</h4>
+				<h3>Onboarding Experience Design</h3>
+				<h3>The Problem</h3>
+				<p>Pros faced challenges in understanding where to start and how to navigate the broad range of features within Housecall Pro, leading to underutilization and diminished value from the product.</p>
+				<h3>Objective</h3>
+				<p>Create a streamlined, intuitive onboarding experience that empowers users to quickly identify and engage with the most valuable aspects of Housecall Pro. The ultimate goal was to drive higher product engagement and improve customer retention</p>
+				<h3>Solution</h3>
+				<p>We developed a comprehensive onboarding strategy that spanned product teams, establishing guiding principles, cohesive design patterns, and a library of reusable components. This approach ensured a consistent, engaging onboarding experience that adapted to each user&rsquo;s journey through the platform and provided contextual support at every stage.</p>
 				<div class="designs">
 					<img src="../img/hcp/homepage.png" alt="" class="sshot" />
 					<img src="../img/hcp/homepage-mobile.png" alt="" class="sshot" />
 					<img src="../img/hcp/feature.png" alt="" class="sshot" />
 					<img src="../img/hcp/starter-state.png" alt="" class="sshot" />
 				</div>
-				<h3>Principles</h3>
-				<p>Onboarding didn&rsquo;t just happen in one place. It followed the Pro on their journey through the product and was contextual.</p>
+				<h3>Key Components</h3>
+				<ol>
+					<li>Core Principles: Onboarding extended across the user&rsquo;s journey, offering contextual guidance to ease adoption and build confidence at every step.</li>
+					<li>Reusable Components: Created a toolkit of flexible onboarding components that could be seamlessly integrated into different areas of the product.</li>
+					<li>Scalable Patterns: Defined interaction and engagement patterns that teams could adapt to maintain brand consistency and drive discovery.</li>
+				</ol>
 				<div class="designs">
 					<img src="../img/hcp/follow.png" alt="" class="sshot" />
+					<img src="../img/hcp/micro-inline.png" alt="" class="sshot" />
+					<img src="../img/hcp/onboarding.png" alt="" class="sshot" />
 				</div>
-				<h3>Results</h3>
-				<p>Retention went up.</p>
+				<h3>Outcome</h3>
+				<p>This user-centered, journey-based onboarding approach resulted in a measurable increase in engagement and significantly improved customer retention.</p>
 				<div class="designs">
 					<img src="../img/hcp/results.png" alt="" class="sshot" />
 				</div>
