--- a/work/hcp.html
+++ b/work/hcp.html
@@ -68,7 +68,7 @@
 				<h3>Onboarding Experience Design</h3>
 				<h3>The Problem</h3>
 				<p>Pros faced challenges in understanding where to start and how to navigate the broad range of features within Housecall Pro, leading to underutilization and diminished value from the product.</p>
-				<h3>Objective</h3>
+				<h3>Desired Outcome</h3>
 				<p>Create a streamlined, intuitive onboarding experience that empowers users to quickly identify and engage with the most valuable aspects of Housecall Pro. The ultimate goal was to drive higher product engagement and improve customer retention</p>
 				<h3>Solution</h3>
 				<p>We developed a comprehensive onboarding strategy that spanned product teams, establishing guiding principles, cohesive design patterns, and a library of reusable components. This approach ensured a consistent, engaging onboarding experience that adapted to each user&rsquo;s journey through the platform and provided contextual support at every stage.</p>
@@ -80,9 +80,9 @@
 				</div>
 				<h3>Key Components</h3>
 				<ol>
-					<li>Core Principles: Onboarding extended across the user&rsquo;s journey, offering contextual guidance to ease adoption and build confidence at every step.</li>
-					<li>Reusable Components: Created a toolkit of flexible onboarding components that could be seamlessly integrated into different areas of the product.</li>
-					<li>Scalable Patterns: Defined interaction and engagement patterns that teams could adapt to maintain brand consistency and drive discovery.</li>
+					<li><em>Core Principles:</em> Onboarding extended across the user&rsquo;s journey, offering contextual guidance to ease adoption and build confidence at every step.</li>
+					<li><em>Reusable Components:</em> Created a toolkit of flexible onboarding components that could be seamlessly integrated into different areas of the product.</li>
+					<li><em>Scalable Patterns:</em> Defined interaction and engagement patterns that teams could adapt to maintain brand consistency and drive discovery.</li>
 				</ol>
 				<div class="designs">
 					<img src="../img/hcp/follow.png" alt="" class="sshot" />
