--- a/work/index.html
+++ b/work/index.html
@@ -57,18 +57,30 @@
 						</a>
 					</li>
 					<li>
-						<a class="multi-preview mini-preview-anchor">
+						<a class="multi-preview mini-preview-anchor" href="m.html">
 							Mavenlink
 							<div class="mini-preview-wrapper">
-								<div class="mini-preview-loading">Coming soon&hellip;</div>
+								<div class="mini-preview-loading"><img src="../img/m/ml-photo-2.png" alt="" /></div>
+							</div>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/m/ml-1.gif" alt="" /></div>
+							</div>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/m/ml-photo-1.jpg" alt="" /></div>
 							</div>
 						</a>
 					</li>
 					<li>
-						<a class="multi-preview mini-preview-anchor">
+						<a class="multi-preview mini-preview-anchor" href="wgu.html">
 							<abbr>WGU</abbr>
 							<div class="mini-preview-wrapper">
-								<div class="mini-preview-loading">Coming soon&hellip;</div>
+								<div class="mini-preview-loading"><img src="../img/wgu/wgu-3.jpg" alt="" /></div>
+							</div>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/wgu/wgu-2.png" alt="" /></div>
+							</div>
+							<div class="mini-preview-wrapper">
+								<div class="mini-preview-loading"><img src="../img/wgu/wgu.png" alt="" /></div>
 							</div>
 						</a>
 					</li>
