--- a/work/m.html
+++ b/work/m.html
@@ -40,9 +40,7 @@
 				<a href="https://nathanrp.github.io">Home</a>
 				<a href="index.html"><i class="icon">&larr;</i> Work</a>
 			</div>
-			<header>
-				<a href="">Mavenlink</a>
-			</header>
+			<h1>Mavenlink</h1>
 			<section>
 				<h3>About Mavenlink</h3>
 				<p>Housecall Pro (<abbr>HCP</abbr>) is a SaaS operating platform combined with modern financial services and supporting business solutions that helps home service professionals run all aspects of their business.</p>
