--- a/work/wgu.html
+++ b/work/wgu.html
@@ -40,9 +40,7 @@
 				<a href="https://nathanrp.github.io">Home</a>
 				<a href="index.html"><i class="icon">&larr;</i> Work</a>
 			</div>
-			<header>
-				<a href="">Western Governors University</a>
-			</header>
+			<h1>Western Governors University</h1>
 			<section>
 				<h3>Role &amp; Responsibilities</h3>
 				<ol>
