--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<script src="https://lonekorean.github.io/mini-preview/jquery.minipreview.js"></script>
@@ -36,56 +36,56 @@
 <body>
 	<div class="page-wrapper">
 		<div class="page">
-		<div class="toolbar">
-			<a href="#"></a>
-			<div class="tools">
-				<label class="switch appearance-switch">
-					<input type="checkbox" id="appearance" />
-					<span class="slider"></span>
-				</label>
-			</div>
+			<header>
+				<h1><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank" class="multi-preview mini-preview-anchor">
+						20+ years
+						<img src="img/me.png" alt="me" class="mini-preview-wrapper me" />
+					</a> 
+					<a class="multi-preview mini-preview-anchor">
+						crafting
+						<div class="mini-preview-wrapper craft">
+							<div class="mini-preview-loading">More about my craft<br/>and process.</div>
+						</div>
+					</a> 
+					<a class="multi-preview mini-preview-anchor open-drawer">
+						human-centered experiences
+						<div class="mini-preview-wrapper">
+							<div class="mini-preview-loading"><img src="img/wgu/wgu-logo.png" alt="" /></div>
+						</div>
+						<div class="mini-preview-wrapper">
+							<div class="mini-preview-loading"><img src="img/m/m-logo.png" alt="" /></div>
+						</div>
+						<div class="mini-preview-wrapper">
+							<div class="mini-preview-loading"><img src="img/hcp/hcp-logo.png" alt="" /></div>
+						</div>
+					</a> that are 
+					<a class="multi-preview mini-preview-anchor mmm">
+						good for people and the business
+						<div class="mini-preview-wrapper scary">
+							<div class="mini-preview-loading">design is honest</div>
+						</div>
+					</a> 
+					.</h1>
+			</header>
+			<footer>
+				<h2>Find me on the www</h2>
+				<ul>
+					<li><a href="mailto:nathanphilpot@gmail.com" target="_blank" class="alt-preview mini-preview-anchor">
+						Email me
+						<div class="mini-preview-wrapper">
+							<div class="mini-preview-loading">Send me an email&hellip;</div>
+						</div>
+					</a></li>
+					<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
+					<li><a href="https://x.com/nathanphilpot" target="_blank"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
+					<li><a href="https://dribbble.com/nathanphilpot" target="_blank">Dribbble<i>&nearr;</i></a></li>
+					<li><a href="https://github.com/nathanrp" target="_blank">Github<i>&nearr;</i></a></li>
+					<li><i class="emoji">&#x1F44D;</i></li>
+				</ul>
+				<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
+				<p class="dust">&copy;NRP • Made by me in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
+			</footer>
 		</div>
-		<header>
-			<a href="">Nathan Philpot</a>
-			<div class="desc">Product Design</div>
-		</header>
-		<section>
-			<h2>About me</h2>
-			<p>With 20+ years of experience as a designer, I&rsquo;ve worked in Fintech, SaaS, Education, Security, B2B, and other industries and organizations, including <a href="https://www.housecallpro.com/" rel="external" target="_blank" class="link-preview">Housecall Pro</a>, <a href="https://www.mavenlink.com/" rel="external" target="_blank" class="link-preview">Mavenlink</a> (now Kantata), <a href="https://www.hrblock.com/" rel="external" target="_blank" class="link-preview"><abbr>H&amp;B</abbr> Block</a>, <a href="https://www.tcs.com/" rel="external" target="_blank" class="link-preview"><abbr>TCS</abbr></a>, <a href="https://www.wgu.edu/" rel="external" target="_blank" class="link-preview"><abbr>WGU</abbr></a>, and <a href="https://www.churchofjesuschrist.org/" rel="external" target="_blank" class="link-preview">The Church of Jesus Christ of Latter-day Saints</a>. Throughout my career, I&rsquo;ve taken on roles ranging from individual contributor to lead and management, driving projects from concept to completion (0&ndash;1). I enjoy human-centered design and working with others to create better products and experiences that are good for people and the business.</p>
-		</section>
-		<section>
-			Check out some of my <a class="multi-preview mini-preview-anchor open-drawer">
-				past work&hellip;
-				<div class="mini-preview-wrapper">
-					<div class="mini-preview-loading"><img src="img/wgu/wgu-logo.png" alt="" /></div>
-				</div>
-				<div class="mini-preview-wrapper">
-					<div class="mini-preview-loading"><img src="img/m/m-logo.png" alt="" /></div>
-				</div>
-				<div class="mini-preview-wrapper">
-					<div class="mini-preview-loading"><img src="img/hcp/hcp-logo.png" alt="" /></div>
-				</div>
-			</a>
-		</section>
-		<footer>
-			<h2>Find me on the www</h2>
-			<ul>
-				<li><a href="mailto:nathanphilpot@gmail.com" target="_blank" class="alt-preview mini-preview-anchor">
-					Email me
-					<div class="mini-preview-wrapper">
-						<div class="mini-preview-loading">Send me an email&hellip;</div>
-					</div>
-				</a></li>
-				<li><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank">LinkedIn<i>&nearr;</i></a></li>
-				<li><a href="https://x.com/nathanphilpot" target="_blank"><span style="font-weight: bold;">&#x1D54F;</span><i>&nearr;</i></a></li>
-				<li><a href="https://dribbble.com/nathanphilpot" target="_blank">Dribbble<i>&nearr;</i></a></li>
-				<li><a href="https://github.com/nathanrp" target="_blank">Github<i>&nearr;</i></a></li>
-				<li><i class="emoji">&#x1F44D;</i></li>
-			</ul>
-			<p class="whispers">good design is honest<br/>design is craft<br/>design is vibe</p>
-			<p class="dust">&copy;NRP • Made by me in Utah, <abbr>USA</abbr>, Earth, the Solar System, Milky Way, Local Group, Virgo Super Cluster, Laniakea (immeasurable heaven) Supercluster, Pisces-Cetus Supercluster Complex, the Universe</p>
-		</footer>
-	</div>
 	</div>
 	<div class="overlay"></div>
 	<div class="drawer">
