--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<a class="multi-preview mini-preview-anchor">
 						crafting
 						<div class="mini-preview-wrapper craft">
-							<div class="mini-preview-loading">More about my craft<br/>and process.</div>
+							<div class="mini-preview-loading">Coming soon&hellip; more about my craft and process.</div>
 						</div>
 					</a> 
 					<a class="multi-preview mini-preview-anchor open-drawer">
