--- a/work/hcp.html
+++ b/work/hcp.html
@@ -53,29 +53,19 @@
 					<li>Worked closely with a cross-functional team of Engineers, Designers, Marketing, PMs and executive stakeholders</li>
 					<li>Worked across teams and product areas to create a holistic user-experience</li>
 				</ol>
-				<h4>Design Skillset &amp; Craft</h4>
-				<h3>iOS and Android Design Systems</h3>
-				<p>I established the iOS and Android design systems.</p>
-				<div class="designs">
-					<img src="../img/hcp/figma.png" alt="" class="sshot" />
-					<img src="../img/hcp/ios.png" alt="" class="sshot" />
-					<img src="../img/hcp/android.png" alt="" class="sshot" />
-					<img src="../img/hcp/button.gif" alt="" class="sshot gif" />
-				</div>
 				<h4>Case Study</h4>
 				<h3>Onboarding Experience Design</h3>
 				<h3>The Problem</h3>
 				<p>Pros faced challenges in understanding where to start and how to navigate the broad range of features within Housecall Pro, leading to underutilization and diminished value from the product.</p>
 				<h3>Desired Outcome</h3>
-				<p>Create a streamlined, intuitive onboarding experience that empowers users to quickly identify and engage with the most valuable aspects of Housecall Pro. The ultimate goal was to drive higher product engagement and improve customer retention</p>
+				<p>Create a unified, consistent onboarding experience that empowers users to quickly identify and engage with the most valuable aspects of Housecall Pro. The goal was to drive higher product engagement and improve customer retention.</p>
+				<h3>Outcome</h3>
+				<p>This user-centered, journey-based onboarding approach resulted in a measurable increase in engagement and significantly improved customer retention.</p>
+				<div class="designs">
+					<img src="../img/hcp/results.png" alt="" class="sshot" />
+				</div>
 				<h3>Solution</h3>
 				<p>We developed a comprehensive onboarding strategy that spanned product teams, establishing guiding principles, cohesive design patterns, and a library of reusable components. This approach ensured a consistent, engaging onboarding experience that adapted to each user&rsquo;s journey through the platform and provided contextual support at every stage.</p>
-				<div class="designs">
-					<img src="../img/hcp/homepage.png" alt="" class="sshot" />
-					<img src="../img/hcp/homepage-mobile.png" alt="" class="sshot" />
-					<img src="../img/hcp/feature.png" alt="" class="sshot" />
-					<img src="../img/hcp/starter-state.png" alt="" class="sshot" />
-				</div>
 				<h3>Key Components</h3>
 				<ol>
 					<li><em>Core Principles:</em> Onboarding extended across the user&rsquo;s journey, offering contextual guidance to ease adoption and build confidence at every step.</li>
@@ -87,10 +77,20 @@
 					<img src="../img/hcp/micro-inline.png" alt="" class="sshot" />
 					<img src="../img/hcp/onboarding.png" alt="" class="sshot" />
 				</div>
-				<h3>Outcome</h3>
-				<p>This user-centered, journey-based onboarding approach resulted in a measurable increase in engagement and significantly improved customer retention.</p>
 				<div class="designs">
-					<img src="../img/hcp/results.png" alt="" class="sshot" />
+					<img src="../img/hcp/homepage.png" alt="" class="sshot" />
+					<img src="../img/hcp/homepage-mobile.png" alt="" class="sshot" />
+					<img src="../img/hcp/feature.png" alt="" class="sshot" />
+					<img src="../img/hcp/starter-state.png" alt="" class="sshot" />
+				</div>
+				<h4>More at Housecall Pro</h4>
+				<h3>iOS and Android Design Systems</h3>
+				<p>I established the iOS and Android design systems.</p>
+				<div class="designs">
+					<img src="../img/hcp/figma.png" alt="" class="sshot" />
+					<img src="../img/hcp/ios.png" alt="" class="sshot" />
+					<img src="../img/hcp/android.png" alt="" class="sshot" />
+					<img src="../img/hcp/button.gif" alt="" class="sshot gif" />
 				</div>
 			</section>
 		</div>
