--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
 				<h1><a href="https://www.linkedin.com/in/nathanphilpot/" target="_blank" class="multi-preview mini-preview-anchor">
 						20+ years
 						<img src="img/me.png" alt="me" class="mini-preview-wrapper me" />
-					</a> 
-					crafting 
+					</a>  
 					<a class="multi-preview mini-preview-anchor open-drawer">
-						human-centered experiences
+						crafting human-centered experiences
 						<div class="mini-preview-wrapper">
 							<div class="mini-preview-loading"><img src="img/wgu/wgu-logo.png" alt="" /></div>
 						</div>
