--- a/work/hcp.html
+++ b/work/hcp.html
@@ -60,23 +60,21 @@
 				<h3>Desired Outcome</h3>
 				<p>Create a unified, consistent onboarding experience that empowers users to quickly identify and engage with the most valuable aspects of Housecall Pro. The goal was to drive higher product engagement and improve customer retention.</p>
 				<h3>Solution</h3>
-				<p>We developed a comprehensive onboarding strategy that spanned product teams, establishing guiding principles, cohesive design patterns, and a library of reusable components. This approach ensured a consistent, engaging onboarding experience that adapted to each user&rsquo;s journey through the platform and provided contextual support at every stage.</p>
+				<p>We developed a comprehensive onboarding strategy that spanned product teams, establishing guiding principles, cohesive design patterns, and a library of reusable components. This approach ensured a consistent, engaging onboarding experience that adapted to each user&rsquo;s journey through the platform and provided contextual support at every step.</p>
 				<div class="designs">
-					<img src="../img/hcp/homepage.png" alt="" class="sshot" />
-					<img src="../img/hcp/homepage-mobile.png" alt="" class="sshot" />
-					<img src="../img/hcp/feature.png" alt="" class="sshot" />
-					<img src="../img/hcp/starter-state.png" alt="" class="sshot" />
+					<img src="../img/hcp1.png" alt="" class="sshot frame" />
+					<img src="../img/hcp2.png" alt="" class="sshot frame" />
+					<img src="../img/hcp3.png" alt="" class="sshot" />
 				</div>
 				<h3>Key Components</h3>
 				<ol>
 					<li><em>Core Principles:</em> Onboarding extended across the user&rsquo;s journey, offering contextual guidance to ease adoption and build confidence at every step.</li>
-					<li><em>Reusable Components:</em> Created a toolkit of flexible onboarding components that could be seamlessly integrated into different areas of the product.</li>
-					<li><em>Scalable Patterns:</em> Defined interaction and engagement patterns that teams could adapt to maintain brand consistency and drive discovery.</li>
+					<li><em>Reusable Components:</em> Created a toolkit of flexible onboarding components that could be integrated into different areas of the product.</li>
+					<li><em>Scalable Patterns:</em> Defined interaction and engagement patterns that teams could adapt to maintain consistency and drive discovery.</li>
 				</ol>
 				<div class="designs">
 					<img src="../img/hcp/follow.png" alt="" class="sshot" />
 					<img src="../img/hcp/micro-inline.png" alt="" class="sshot" />
-					<img src="../img/hcp/onboarding.png" alt="" class="sshot" />
 				</div>
 				<h3>Outcome</h3>
 				<p>This user-centered, journey-based onboarding approach resulted in a measurable increase in engagement and significantly improved customer retention.</p>
@@ -88,8 +86,6 @@
 				<p>I established the iOS and Android design systems.</p>
 				<div class="designs">
 					<img src="../img/hcp/figma.png" alt="" class="sshot" />
-					<img src="../img/hcp/ios.png" alt="" class="sshot" />
-					<img src="../img/hcp/android.png" alt="" class="sshot" />
 					<img src="../img/hcp/button.gif" alt="" class="sshot gif" />
 				</div>
 			</section>
