--- a/work/m.html
+++ b/work/m.html
@@ -73,16 +73,11 @@
 					<li><em>Collaborative Build:</em> Finalized a <abbr>v1</abbr> scope that focused on core functionality and began a collaborative build phase with engineering. Continued iteration with engineering during development that led to a responsive, intuitive UI, enabling users to see the immediate impact of their actions.</li>
 				</ol>
 				<div class="designs">
+					<img src="../img/m/ml-6.png" alt="" class="sshot frame" />
 					<img src="../img/m/ml-5.gif" alt="" class="sshot" />
-					<img src="../img/m/ml-2.gif" alt="" class="sshot gif" />
-					<img src="../img/m/ml-3.gif" alt="" class="sshot gif" />
-					<img src="../img/m/ml-1.gif" alt="" class="sshot gif" />
 				</div>
 				<h3>Outcome</h3>
 				<p>By January 2018, we launched a resource management solution that empowered planners with a flexible, user-friendly interface designed to improve both operational efficiency and strategic workforce planning. This collaborative, research-driven approach resulted in a solution that has supported Mavenlink&rsquo;s differentiation and growth in the professional services space.</p>
-				<div class="designs">
-					<img src="../img/m/ml-6.png" alt="" class="sshot" />
-				</div>
 			</section>
 		</div>
 	</div>
